--- a/src/index.css
+++ b/src/index.css
@@ -3,14 +3,23 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&display=swap');
 @import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
 :root {
+  
+ 
+}
+@font-face {
+  font-family: "Poppins";
+  src: url("/fonts/Poppins-Regular.woff2") format("woff2"),
+       url("/fonts/Poppins-Regular.woff") format("woff");
+  font-weight: normal;
+  font-style: normal;
+}
+body{
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   @theme {
     --font-roboto: "Roboto", sans-serif; 
     --font-family: "Poppins", sans-serif;
   }
- 
 }
-
 
 
 
